# smart-city-indicators

./: .env.example  .gitignore  CLAUDE.md  Dockerfile.api  Dockerfile.frontend  Procfile  README.md  docker-compose.yml  package-lock.json  pyproject.toml  render.yaml  requirements-dashboard.txt  requirements-dev.txt  requirements.txt
dashboard/: app.py
data/: dados_ibge_pr.xlsx  maringa_smartcity_lotes.xlsx
frontend/: package-lock.json  package.json  screenshot_iua_doc.mjs
frontend/src/: App.jsx  index.css
frontend/src/components/: Sidebar.jsx
frontend/src/pages/: Dashboard.jsx  IUA.jsx  IUADocumentacao.jsx  Indicadores.jsx
src/: IBGE_data_loarder.py  api.py  config.py  data_loader.py  ibge_data_loader.py  indicators.py  main.py  maringa_data_loader.py  utils.py
src/censo_urbano/: config.py
src/censo_urbano/api/: router.py
src/censo_urbano/domain/: dimensions.py  index.py  indicators.py  normalization.py
src/censo_urbano/repositories/: censo_repository.py  malha_repository.py
src/censo_urbano/schemas/: setor.py
src/censo_urbano/services/: iua_service.py
src/smart_city_indicators.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: conftest.py  test_api.py  test_indicators.py  test_maringa_data_loader.py  test_utils.py
tests/censo_urbano/api/: test_router.py
tests/censo_urbano/domain/: test_dimensions.py  test_index.py  test_indicators.py  test_normalization.py
tests/censo_urbano/repositories/: test_censo_repository.py  test_malha_repository.py
tests/censo_urbano/services/: test_iua_service.py
