[project]
name = "smart-city-indicators"
version = "0.1.0"
description = "API de indicadores urbanos para Maringá-PR"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Francisco Junior", email = "junior.fduarte@gmail.com" }
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
exclude = ["venv/", "dashboard/"]
